--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                         <div class="article_2">
                             <h2>お車でお越しの場合</h2>
                             <div class="left">
-                                <p>地上一般道からは八重洲通りの東駐車場 八重洲入口、日本橋入口と、外堀通りの西駐車場入口の3カ所がございます。</p>
+                                <p>一般道からは3カ所の入り口がございます。</p>
                                 <p>〈ご利用上の注意〉</p>
-                                <p>当駐車場は地下駐車場のため、サイズの制限があります。</p>
-                                <p>車高：2.1Ｍまで　車巾：2.0Ｍまで　車長：6.0Ｍまで　重量：4.0Ｔ未満</p>
+                                <p>地下駐車場のため車高等サイズの制限があります。</p>
+                                
                             </div>
                         </div>
                     </div>
