--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </nav>
     
     <div id="wrapper">
+            <a href="http://localhost:8888/20221014_demo/index.html?utm_source=top&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>
 
         <header>
             <div class="container">
