--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="ja">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1H420Y560G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1H420Y560G');
+</script>
 
     <link rel="shortcut icon" href="../images/favicon_image/bread_favicon.ico" type="image/vnd.microsoft.icon">
 
