--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
             <a href="#top">ページトップへ</a>
         
         </main>
+    
+    <a href="http://localhost:8888/20221014_demo/index.html?utm_source=top&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>
+
 
             <footer>
                 <small>
