--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
     </div>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1H420Y560G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1H420Y560G');
+</script>
 
 <body>
 
