--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
     
-    <a href="http://localhost:8888/20221014_demo/index.html?utm_source=top&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>
+    <a href="https://yuyu-sag.github.io/?utm_source=top&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>
 
 
             <footer>
