--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </script>
 
 <body>
-  <a href="https://yuyu-sag.github.io/?utm_source=top&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>   
+  <a href="https://yuyu-sag.github.io/?utm_source=google&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>   
 
             <footer>
                 <small>
