--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
         </style>
 
     </div>
-</head>
-
-
-<body>
-    <!-- Google tag (gtag.js) -->
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1H420Y560G"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -37,7 +33,12 @@
 
   gtag('config', 'G-1H420Y560G');
 </script>
-  <a href="https://yuyu-sag.github.io/?utm_source=google&utm_medium=bnr&utm_campaign=rgk&utm_content=top_bnr">TOPに戻る</a>   
+</head>
+
+
+<body>
+
+  <a href="https://yuyu-sag.github.io/?utm_source=top&utm_medium=bnr&utm_campaign=test&utm_content=top_bnr">TOPに戻る</a>   
 
             <footer>
                 <small>
