--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <nav id="nav">
         <ul>
-            <li><a id=nv href="#top_page">トップ</a></li>
+            <li><a id=nv href="#top_page">TOP</a></li>
             <li><a id=nv1 href="#news_page">お知らせ</a></li>
             <li><a id=nv2 href="#menu_page">メニュー</a></li>
             <li><a id=nv3 href="#access_page">アクセス</a></li>
